# oxide

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  feedback.md  flake.nix
.agents/skills/: code-review.md  dust-api  oxide-check  sql-expert.md
.claude/agents/: oxide-codebase-explorer.md  oxide-developer.md  oxide-dust-codebase-explorer.md  oxide-implementer.md  oxide-planner.md  oxide-reviewer.md
.codex/agents/: oxide-codebase-explorer.toml  oxide-developer.toml  oxide-dust-codebase-explorer.toml  oxide-implementer.toml  oxide-planner.toml  oxide-reviewer.toml
.github/workflows/: ci.yml
docs/adr/: 0001-rust-cli-for-dust-agents.md  0002-nix-flake-for-dev-and-packaging.md  0003-conventional-commits.md  0004-test-driven-development.md  0005-ratatui-for-tui.md  0006-match-dust-cli-http-identity.md  0007-prefix-cli-conversation-titles.md  0008-slash-command-framework.md  0009-local-skills-first-message-injection.md  0010-mandatory-tool-approval-gate.md
docs/plan/: auth-login.html  context-window-status-bar.html  cwd-status-color.html  devops-dust-feature-ideas.html  devops-dust-feature-ideas.md  dust-api.html  fix-agent-switch-bug.html  local-skills.html  mcp-bash-tool.html  mouse-scroll-messages.html  new-conversation.html  oxide-review-haiku-improvement.html  resume-conversation.html  streaming-indicator.html  subagent-inline-ui.html  subagent-mcp-tool.html  switch-agent.html  tool-call-ux.html  (+1 more)
scripts/: verify-single-tool-call.sh
src/: app.rs  cli.rs  config.rs  event.rs  handler.rs  input_buffer.rs  main.rs  observability.rs  slash.rs
(+39 files in other folders)
