[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
